[package]
name = "async-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = [ "fs", "rt" ] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
rio = "0.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "minwinbase", "fileapi"] }
memoffset = "0.9"

[target.'cfg(target_os = "freebsd")'.dependencies]
mio-aio = "0.8"

[target.'cfg(target_os = "dragonfly")'.dependencies]
mio-aio = "0.8"

[target.'cfg(target_os = "openbsd")'.dependencies]
mio-aio = "0.8"

[target.'cfg(target_os = "netbsd")'.dependencies]
mio-aio = "0.8"
